--- a/src/components/comp/info-block/info-block.module.scss
+++ b/src/components/comp/info-block/info-block.module.scss
@@ -13,6 +13,7 @@
     line-height: 58px;
     letter-spacing: 0%;
     margin-bottom: 35px;
+    max-width: 300px;
 }
 
 .line {
@@ -72,6 +73,15 @@
 }
 
 .name {
+    color: #060606;
+    font-family: TT Firs Neue;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 120%;
+    letter-spacing: 0%;
+}
+
+.text {
     color: #060606;
     font-family: TT Firs Neue;
     font-size: 15px;
