--- a/src/pages/EmployeePage/employee-page.module.scss
+++ b/src/pages/EmployeePage/employee-page.module.scss
@@ -22,8 +22,9 @@
     display: flex;
     flex-direction: column;
     border-radius: 8px;
-    background: #f4f4f4;
+    background: #fefefe;
     padding: 32px 0px;
+    box-shadow: 0px 4.05px 5.68px 0px rgba(0, 0, 0, 0.03);
 }
 
 .wrapper {
@@ -38,4 +39,34 @@
     width: 100%;
     border: 1px solid rgb(6, 6, 6);
     margin-bottom: 24px;
+}
+
+.buttonWrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    padding-right: 16px;
+}
+
+@media (max-width: 561px) {
+    .whiteBlockWrapper {
+        padding: 19.5px 0 40px 0px;
+    }
+
+    .wrapper {
+        justify-content: center;
+    }
+
+    .allWrapper {
+        display: flex;
+        flex-direction: column;
+        background-color: #fefefe;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .contentWrapper {
+        padding: 0 16px;
+    }
 }
