Готов адаптив всей страници

--- a/src/components/comp/company-info-block/company-info-block.module.scss
+++ b/src/components/comp/company-info-block/company-info-block.module.scss
@@ -32,3 +32,9 @@
     max-width: 205px;
     text-wrap: wrap;
 }
+
+@media (max-width: 571px) {
+    .contentWrapper {
+        padding-left: 20px;
+    }
+}
