--- a/src/components/comp/company-name-block/company-name-block.module.scss
+++ b/src/components/comp/company-name-block/company-name-block.module.scss
@@ -21,6 +21,7 @@
     font-weight: 800;
     line-height: 120%;
     letter-spacing: 0px;
+    margin-bottom: 12px;
 }
 
 .description {
@@ -30,4 +31,27 @@
     font-weight: 400;
     line-height: 120%;
     letter-spacing: 0%;
+    margin-bottom: 13px;
+}
+
+.line {
+    border: 1px solid rgb(6, 6, 6);
+    width: 99.5%;
+    margin-bottom: 16px;
+}
+
+@media (max-width: 571px) {
+    .wrapper {
+        max-width: none;
+        width: 100%;
+        padding-left: 20px;
+    }
+
+    .companyName {
+        max-width: 303px;
+    }
+
+    .description {
+        max-width: 303px;
+    }
 }
