--- a/src/components/comp/links-footer/links-footer.module.scss
+++ b/src/components/comp/links-footer/links-footer.module.scss
@@ -6,6 +6,7 @@
     width: 100%;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-between;
 }
 
@@ -14,8 +15,18 @@
     height: 24px;
 }
 
-@media (max-width: 561px) {
+@media (max-width: 571px) {
     .wrapper {
         padding: 0 20px;
+    }
+
+    .img {
+        width: 52px;
+        height: 52px;
+        margin-bottom: 31px;
+
+        &:last-child {
+            margin-bottom: 0;
+        }
     }
 }
