--- a/src/pages/CompanyPage/company-page.module.scss
+++ b/src/pages/CompanyPage/company-page.module.scss
@@ -35,7 +35,26 @@
 }
 
 .line {
-    width: 100%;
+    width: 99.5%;
     border: 1px solid rgb(6, 6, 6);
     margin-bottom: 24px;
+}
+
+@media (max-width: 571px) {
+    .allWrapper {
+        background-color: #ffff;
+        padding-top: 0;
+    }
+
+    .wrapper {
+        flex-direction: column;
+        padding-left: 0;
+        margin-bottom: 16px;
+    }
+
+    .whiteBlockWrapper {
+        padding: 20px 0 39px 0;
+        box-shadow: 0px 4.05px 5.68px 0px rgba(0, 0, 0, 0.03);
+        background: #fefefe;
+    }
 }
