--- a/src/pages/EmployeePage/employee-page.module.scss
+++ b/src/pages/EmployeePage/employee-page.module.scss
@@ -22,7 +22,7 @@
     display: flex;
     flex-direction: column;
     border-radius: 8px;
-    background: #fefefe;
+    background: #f4f4f4;
     padding: 32px 0px;
     box-shadow: 0px 4.05px 5.68px 0px rgba(0, 0, 0, 0.03);
 }
@@ -47,11 +47,14 @@
     justify-content: space-between;
     width: 100%;
     padding-right: 16px;
+    margin-top: -72px;
 }
 
-@media (max-width: 561px) {
+@media (max-width: 571px) {
     .whiteBlockWrapper {
         padding: 19.5px 0 40px 0px;
+        margin-bottom: 12px;
+        background: #fefefe;
     }
 
     .wrapper {
@@ -67,6 +70,7 @@
     }
 
     .contentWrapper {
+        max-width: 375px;
         padding: 0 16px;
     }
 }
