--- a/src/components/comp/company-name-block/company-name-block.module.scss
+++ b/src/components/comp/company-name-block/company-name-block.module.scss
@@ -16,7 +16,7 @@
 
 .companyName {
     color: #060606;
-    font-family: Abhaya Libre ExtraBold;
+    font-family: Abhaya Libre;
     font-size: 20px;
     font-weight: 800;
     line-height: 120%;
@@ -43,8 +43,8 @@
 @media (max-width: 571px) {
     .wrapper {
         max-width: none;
-        width: 100%;
         padding-left: 20px;
+        margin-right: 0;
     }
 
     .companyName {
