--- a/src/components/comp/info-block/info-block.module.scss
+++ b/src/components/comp/info-block/info-block.module.scss
@@ -87,6 +87,17 @@
     letter-spacing: 0%;
 }
 
+.href {
+    color: #060606;
+    font-family: TT Firs Neue;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 120%;
+    letter-spacing: 0%;
+    text-decoration: none;
+    max-width: 205px;
+}
+
 .text {
     color: #060606;
     font-family: TT Firs Neue;
@@ -94,6 +105,7 @@
     font-weight: 400;
     line-height: 120%;
     letter-spacing: 0%;
+    max-width: 205px;
 }
 
 @media (max-width: 571px) {
