--- a/src/components/shared/swiper/swiper.module.scss
+++ b/src/components/shared/swiper/swiper.module.scss
@@ -1,12 +1,57 @@
-.imageSwiper {
+.photoContainer {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+}
+
+.imgTrack {
+    display: flex;
+    flex-direction: row;
+    overflow-x: auto;
+    overflow-y: hidden;
+    max-width: 279px;
+    width: 100%;
     height: 495px;
-    background-image: url('../../../../public/baseImg.png');
-    border-radius: 8.11px;
     margin-bottom: 16px;
+    scroll-behavior: smooth;
+    scroll-snap-type: x;
+}
+
+.imgTrack::-webkit-scrollbar {
+    display: none;
+}
+
+.img {
+    height: 495px;
+    border-radius: 8.11px;
+    user-select: none;
+    pointer-events: none;
+    scroll-snap-align: start;
+}
+
+.btnWrapper {
+    display: flex;
+    position: absolute;
+    bottom: 24px;
+    right: 111px;
+}
+
+.slideButton {
+    width: 6px;
+    height: 6px;
+    border-radius: 16px;
+    background: #9a9a9a;
+    margin-right: 6px;
+    border: none;
+    display: block;
+
+    &:last-child {
+        margin-right: 0;
+    }
 }
 
 @media (max-width: 571px) {
-    .imageSwiper {
+    .sliderList {
         height: 369px;
         width: 100%;
         background-size: cover;
