добавил шрифты, доделал кнопку в мобильной версии

--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,2 +1,37 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Abhaya+Libre:wght@400;500;600;700;800&display=swap');
+
+@font-face {
+    font-family: 'TT Firs Neue';
+    src: url('../fonts/TTFirsNeue-Regular.eot');
+    src: local('TT Firs Neue Regular'), local('TTFirsNeue-Regular'),
+        url('../fonts/TTFirsNeue-Regular.woff2') format('woff2'),
+        url('../fonts/TTFirsNeue-Regular.woff') format('woff'),
+        url('../fonts/TTFirsNeue-Regular.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'TT Firs Neue';
+    src: url('../fonts/TTFirsNeue-Bold.eot');
+    src: local('TT Firs Neue Bold'), local('TTFirsNeue-Bold'),
+        url('../fonts/TTFirsNeue-Bold.woff2') format('woff2'),
+        url('../fonts/TTFirsNeue-Bold.woff') format('woff'),
+        url('../fonts/TTFirsNeue-Bold.ttf') format('truetype');
+    font-weight: 700;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Abhaya Libre';
+    src: local('Abhaya Libre Extra Bold'), local('Abhaya-Libre-Extra-Bold'),
+        url('../fonts/AbhayaLibre-ExtraBold.woff2') format('woff2'),
+        url('../fonts/AbhayaLibre-ExtraBold.woff') format('woff'),
+        url('../fonts/AbhayaLibre-ExtraBold.ttf') format('truetype');
+    font-weight: 800;
+    font-style: normal;
+}
+
+body {
+    font-family: 'TT Firs Neue';
+}
