--- a/src/components/shared/logo/logo.module.scss
+++ b/src/components/shared/logo/logo.module.scss
@@ -7,6 +7,7 @@
     letter-spacing: 0%;
     margin-bottom: 35px;
     max-width: 300px;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.3);
 }
 
 @media (max-width: 571px) {
