--- a/src/pages/employee-page/info-block/info-block.module.scss
+++ b/src/pages/employee-page/info-block/info-block.module.scss
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: column;
     width: 336px;
-    align-items: center;
 }
 
 .logo {
@@ -32,6 +31,12 @@
     display: flex;
     flex-direction: column;
     padding-left: 24px;
+}
+
+.logoWrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .name {
