--- a/src/components/slider/slider.module.scss
+++ b/src/components/slider/slider.module.scss
@@ -47,6 +47,7 @@
     margin-right: 6px;
     border: none;
     display: block;
+    cursor: pointer;
 
     &:last-child {
         margin-right: 0;
